--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@ionic/angular": "^5.0.0",
     "angularfire2": "^5.4.2",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "firebase": "^4.8.2",
-    "rxjs": "~6.5.1",
+    "firebase": "^9.2.0",
+    "primeng": "^11.4.5",
+    "rxjs": "^6.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -37,7 +38,7 @@
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/angular-toolkit": "^5.0.0",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.5.0",
